--- a/ProyectoDesarrollo/src/Vista/GUI.fxml
+++ b/ProyectoDesarrollo/src/Vista/GUI.fxml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
@@ -16,7 +23,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" fx:id="ventanaPrincipal" maxHeight="617.0" maxWidth="837.0" minHeight="617.0" minWidth="837.0" prefHeight="617.0" prefWidth="837.0" style="-fx-background-color: #76a2cb;" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controlador.ControladorGUI">
+<AnchorPane id="AnchorPane" fx:id="ventanaPrincipal" maxHeight="617.0" maxWidth="837.0" minHeight="617.0" minWidth="837.0" prefHeight="617.0" prefWidth="837.0" style="-fx-background-color: #76a2cb;" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controlador.ControladorGUI">
    <children>
       <Pane fx:id="panelPrincipal" layoutX="-3.0" prefHeight="617.0" prefWidth="837.0" style="-fx-background-color: #76a2cb;" AnchorPane.leftAnchor="-3.0">
          <children>
@@ -28,25 +35,25 @@
                   <Font name="Verdana Bold" size="14.0" />
                </font>
             </Button>
-            <Pane fx:id="panelBienvenida" layoutX="69.0" layoutY="47.0" prefHeight="515.0" prefWidth="890.0" style="-fx-background-color: #FFFFFF;" visible="false">
+            <Pane fx:id="panelBienvenida" layoutX="69.0" layoutY="51.0" prefHeight="515.0" prefWidth="702.0" style="-fx-background-color: #FFFFFF;">
                <children>
                    
-                        <Label layoutX="296.0" layoutY="59.0" prefHeight="80.0" prefWidth="368.0" style="-fx-background-color: #76a2cb;" text="   Le damos la bienvenida " textFill="WHITE">
+                        <Label alignment="CENTER" layoutX="168.0" layoutY="59.0" prefHeight="80.0" prefWidth="368.0" style="-fx-background-color: #76a2cb;" text="Le damos la bienvenida" textFill="WHITE">
                      <font>
                         <Font size="30.0" />
                      </font>
                   </Label>
-                  <Label layoutX="220.0" layoutY="164.0" prefHeight="80.0" prefWidth="519.0" style="-fx-background-color: #76a2cb;" text="      a la empresa de autos Cheliang " textFill="WHITE">
+                  <Label alignment="CENTER" layoutX="92.0" layoutY="164.0" prefHeight="80.0" prefWidth="519.0" style="-fx-background-color: #76a2cb;" text="a la empresa de autos Cheliang" textFill="WHITE">
                      <font>
                         <Font size="30.0" />
                      </font>
                   </Label>
-                  <ImageView fitHeight="152.0" fitWidth="299.0" layoutX="332.0" layoutY="258.0" opacity="0.7" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="152.0" fitWidth="299.0" layoutX="204.0" layoutY="258.0" opacity="0.7" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../Recursos/logo.png" />
                      </image>
                   </ImageView>
-                  <Button fx:id="bContinuar" layoutX="425.0" layoutY="421.0" mnemonicParsing="false" onAction="#continuar" prefHeight="51.0" prefWidth="109.0" style="-fx-background-color: #76a2cb;" text="Continuar" textFill="WHITE">
+                  <Button fx:id="bContinuar" alignment="CENTER" layoutX="297.0" layoutY="421.0" mnemonicParsing="false" onAction="#continuar" prefHeight="51.0" prefWidth="109.0" style="-fx-background-color: #76a2cb;" text="Continuar" textFill="WHITE">
                      <font>
                         <Font name="Verdana Bold" size="15.0" />
                      </font>
@@ -56,7 +63,7 @@
                   </Button>
                </children>
             </Pane>
-            <GridPane fx:id="panelIngreso" gridLinesVisible="true" layoutX="69.0" layoutY="53.0" maxHeight="480.0" maxWidth="890.0" minHeight="450.0" minWidth="668.0" prefHeight="480.0" prefWidth="702.0">
+            <GridPane fx:id="panelIngreso" gridLinesVisible="true" layoutX="69.0" layoutY="51.0" prefHeight="515.0" prefWidth="702.0" style="-fx-background-color: #FFFFFF;" visible="false">
               <columnConstraints>
                 <ColumnConstraints fillWidth="false" hgrow="SOMETIMES" maxWidth="559.0" minWidth="10.0" prefWidth="546.0" />
                 <ColumnConstraints fillWidth="false" hgrow="SOMETIMES" maxWidth="490.0" minWidth="10.0" prefWidth="344.0" />
@@ -70,7 +77,7 @@
                         <Image url="@../Recursos/opcion2.jpg" />
                      </image>
                   </ImageView>
-                  <Pane maxHeight="480.0" minHeight="480.0" prefHeight="480.0" prefWidth="491.0" style="-fx-background-color: #FFFFFF;" GridPane.columnIndex="1">
+                  <Pane maxHeight="514.0" minHeight="480.0" prefHeight="514.0" prefWidth="250.0" style="-fx-background-color: #FFFFFF;" GridPane.columnIndex="1">
                      <children>
                         <Label layoutX="44.0" layoutY="115.0" prefHeight="17.0" prefWidth="117.0" style="-fx-background-color: #76a2cb;" text=" Cédula" textFill="WHITE">
                            <font>
